--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,40 +20,8 @@ cmake_minimum_required(VERSION 2.8)
 # and add the path to the module path                                #
 #====================================================================#
 
-if(NOT EXISTS ${CMAKE_BINARY_DIR}/marlin-cmake)
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/buildroot/share/cmake/modules)
 
-    file(DOWNLOAD https://raw.githubusercontent.com/tohara/marlin-cmake/v1.0.0/modules/Arduino_SDK.cmake
-                  ${CMAKE_BINARY_DIR}/marlin-cmake/modules/Arduino_SDK.cmake SHOW_PROGRESS)
-                  
-    file(DOWNLOAD https://raw.githubusercontent.com/tohara/marlin-cmake/v1.0.0/modules/marlin_cmake_functions.cmake
-                  ${CMAKE_BINARY_DIR}/marlin-cmake/modules/marlin_cmake_functions.cmake SHOW_PROGRESS)             
-    
-    file(DOWNLOAD https://raw.githubusercontent.com/tohara/marlin-cmake/v1.0.0/Platform/Arduino.cmake
-                  ${CMAKE_BINARY_DIR}/marlin-cmake/Platform/Arduino.cmake SHOW_PROGRESS)
-    
-    file(DOWNLOAD https://raw.githubusercontent.com/tohara/marlin-cmake/v1.0.0/settings/marlin_boards.txt
-                  ${CMAKE_BINARY_DIR}/marlin-cmake/settings/marlin_boards.txt SHOW_PROGRESS)
-                  
-    file(DOWNLOAD https://raw.githubusercontent.com/tohara/marlin-cmake/v1.0.0/toolchain/ArduinoToolchain.cmake
-                  ${CMAKE_BINARY_DIR}/marlin-cmake/toolchain/ArduinoToolchain.cmake SHOW_PROGRESS)
-              
-    if(WIN32)
-        file(DOWNLOAD https://raw.githubusercontent.com/tohara/marlin-cmake/v1.0.0/resources/make.exe
-                      ${CMAKE_BINARY_DIR}/make.exe SHOW_PROGRESS)
-    endif(WIN32)
-
-endif()
-
-set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} ${CMAKE_BINARY_DIR}/marlin-cmake/modules)
-
-#====================================================================#
-#  Custom path to Arduino SDK can be set here.                       #
-#  It can also be set from command line. eg.:                        #
-#  cmake .. -DARDUINO_SDK_PATH="/path/to/arduino-1.x.x"              #
-#====================================================================#
-#set(ARDUINO_SDK_PATH ${CMAKE_CURRENT_LIST_DIR}/arduino-1.6.8)
-#set(ARDUINO_SDK_PATH /home/tom/git/BigBox-Dual-Marlin/ArduinoAddons/Arduino_1.6.x)
-#set(ARDUINO_SDK_PATH  /home/tom/test/arduino-1.6.11)
 #====================================================================#
 #  Set included cmake files                                          #
 #====================================================================#
@@ -63,7 +31,7 @@ include(marlin_cmake_functions)
 #====================================================================#
 #  Set toolchain file for arduino                                    #
 #====================================================================#
-set(CMAKE_TOOLCHAIN_FILE ${CMAKE_BINARY_DIR}/marlin-cmake/toolchain/ArduinoToolchain.cmake) # Arduino Toolchain
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/buildroot/share/cmake/toolchain/ArduinoToolchain.cmake) # Arduino Toolchain
 
 #====================================================================#
 #  Setup Project                                                     #
@@ -94,15 +62,15 @@ print_programmer_list()
 #    set(${PROJECT_NAME}_BOARD mega)                                 #
 #    set(${PROJECT_NAME}_CPU atmega2560)                             #
 #====================================================================#
-setup_motherboard(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/../../../Marlin)
+setup_motherboard(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/Marlin)
 
 #====================================================================#
 #  Setup all source files                                            #
 #  Incude Marlin.ino to compile libs not included in *.cpp files     #
 #====================================================================#
 
-file(GLOB SOURCES "../../../Marlin/*.cpp")
-set(${PROJECT_NAME}_SRCS "${SOURCES};../../../Marlin/Marlin.ino")
+file(GLOB SOURCES "Marlin/*.cpp")
+set(${PROJECT_NAME}_SRCS "${SOURCES};Marlin/Marlin.ino")
 
 #====================================================================#
 #  Define the port for uploading code to the Arduino                 #
